# dlmm-sdk1.0

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: ci-pr-main-cli.yml  ci-pr-main-market-making.yml  ci-pr-main-program.yml  ci-pr-main-sdk.yml
cli/: Cargo.toml  README.md
cli/src/: args.rs  main.rs  math.rs
command_list/: claim_fee_from_operator.sh  ilm_curve.sh  ilm_curve_by_operator.sh  ilm_single_bin.sh  ilm_single_bin_by_operator.sh  set_bootstrapping_pair_status.sh
commons/: Cargo.toml
commons/src/: lib.rs  quote.rs
market_making/: Cargo.toml  README.MD
market_making/src/: bin_array_manager.rs  config.json  core.rs  main.rs  pair_config.rs  router.rs  state.rs  utils.rs
programs/lb_clmm/: Cargo.toml
python-client/dlmm/: README.md  pyproject.toml
test_sdk/: Cargo.toml
trading_dashboard/: Cargo.toml
trading_dashboard/examples/: test_flow.rs
trading_dashboard/src/: api.rs  bin_array_manager.rs  config.rs  lib.rs  main.rs  pair_config.rs  state.rs  types.rs  utils.rs
trading_dashboard/src/liquidity/: bin_array_manager.rs  deposit.rs  mod.rs  pool.rs  position.rs  state.rs  withdraw.rs
trading_dashboard/src/monitoring/: metrics.rs  mod.rs  price_range.rs
trading_dashboard/src/swap/: jupiter.rs  mod.rs  retry.rs
trading_dashboard/src/wallet/: balance.rs  mod.rs  reader.rs  tests.rs
trading_dashboard/tests/: integration_test.rs
ts-client/: README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
ts-client/src/: index.ts
(+115 files in other folders)
